Repaired padding and margin in contact section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -750,7 +750,7 @@ i.fab.fa-twitter {
   padding: 80px 30px;
 }
 
-#contact {
+#contact-section {
   margin-top: 60px;
   margin-bottom: 30px;
   padding: 80px 30px;
