--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,10 +195,6 @@ a.navbar-brand {
 
     position: relative;
     overflow: hidden;
-} @media (max-width: 576px) {
-    .jumbotron-container { 
-      min-width: 320px; 
-  } 
 }
 
 .jumbotron-overlay {
@@ -235,12 +231,7 @@ h1.display-3 {
     letter-spacing: 1px;
     text-shadow: 2px 2px #011826;
     font-size: 5rem;
-} @media (max-width: 576px) {
-    .h1.display-3 { 
-      min-width: 320px; 
-  } 
 }
-
 
 h2.lead {
     font-family: 'Playfair Display', serif;
@@ -295,8 +286,6 @@ p.schedule-content {
 }
  
 .card {
-    margin-top: 10px;
-    margin-bottom: 10px;
     -webkit-box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
     box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
 }
@@ -475,7 +464,6 @@ form {
         -ms-flex: 1 1 auto;
             flex: 1 1 auto;
     min-height: 1px;
-    padding: 1rem;
 }
 
 blockquote {
@@ -666,39 +654,39 @@ li.breadcrumb-item {
 
 /*-------------------------------------------- Sections */
 #about {
-    padding: 80px 40px;
-    margin: 50px 20px;
+    padding: 80px 0;
+    margin: 50px 10px;
 }
 
 #schedule {
-    padding: 80px 40px;
-    margin: 50px 20px;
+    padding: 80px 0;
+    margin: 50px 10px;
 }
 
 #quotes {
-    padding: 80px 40px;
-    margin: 50px 20px;
+    padding: 80px 0;
+    margin: 50px 10px;
 }
 
 #contact {
-    padding: 80px 40px;
-    margin: 50px 20px;
+    padding: 80px 0;
+    margin: 50px 10px;
 }
 
 /*.end sections*/
 
 /*-------------------------------------------- Media Queries */
 /* Jumbotron */
-@media (max-width: 320px) {
+@media (max-width: 575px) {
     .cta_button, .cta_button:active {
-       display: inline-block;
-       padding-left: 1rem;
-       position: absolute;
-       top: 1rem;
+        display: inline-block;
+        padding-left: .5rem;
+        position: absolute;
+        top: 1rem;
         right: 5rem;
         background: #011826;
-        width: 3.6rem;
-        height: 3.6rem;
+        width: 4rem;
+        height: 4rem;
         border-radius: 50%;
         font-family: 'Futura-PT', sans-serif;
         font-size: 12px;
@@ -710,6 +698,7 @@ li.breadcrumb-item {
         outline: none;
         animation: fadein 2.5s ease-in;
         vertical-align: middle;
+        text-align: center;
     } .cta_button:hover {
         cursor: pointer;
         transform: scale(1.05);
@@ -724,7 +713,7 @@ li.breadcrumb-item {
     } 
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 575px) {
     .jumbotron-container {
         background-image: url('../images/infinityphoto.jpg');
         background-position: 18% 100%;
@@ -756,7 +745,11 @@ li.breadcrumb-item {
         text-shadow: 2px 2px #011826;
     } h2.lead {
         font-size: 1.2rem;
-
+        margin-bottom: 15px;
+    } a.btn.btn-info.btn-lg {
+        font-size: 1rem;
+    } a.btn.btn-info.btn-lg:hover {
+        font-size: 1rem;
     }
 }
 
