Repaired placeholder error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -517,7 +517,7 @@ span.contact {
     margin: 0 auto;
 }
 
-.form-control::placeholder {
+.form-control.placeholder {
     color: #787d80;
     font-family: "Futura-PT", sans-serif;
     font-size: 1rem;
