--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -422,14 +422,14 @@ form {
     background-color: #69a8a9 !important;
 }
 
-.quote-card .card-top {
+.review-card .card-top {
     height: 120px;
     overflow: hidden;
     border-top-left-radius: .25rem;
     border-top-right-radius: .25rem;
 }
   
-.quote-card .avatar {
+.review-card .avatar {
     width: 120px;
     margin-top: -60px;
     overflow: hidden;
@@ -442,7 +442,7 @@ form {
     height: auto;
 }
 
-.card.quote-card.h-100 {
+.card.review-card.h-100 {
     background-color: #fff;
     -webkit-box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
     box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
@@ -656,22 +656,22 @@ li.breadcrumb-item {
 
 /*-------------------------------------------- Sections */
 #about {
-    padding: 80px 10px;
+    padding: 80px 20px;
     margin: 50px 20px;
 }
 
 #schedule {
-    padding: 80px 10px;
+    padding: 80px 20px;
     margin: 50px 20px;
 }
 
-#quotes {
-    padding: 80px 10px;
+#reviews {
+    padding: 80px 20px;
     margin: 50px 20px;
 }
 
 #contact {
-    padding: 80px 10px;
+    padding: 80px 20px;
     margin-top: 50px;
     margin-bottom: 10px;
 }
