--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,7 @@ html {
     color: #f2f2f2;
     background: #69a8a9;
 }
+/* end gloabl styles */
 
 /*-----------------------------------------Titles and Subtitles */
 h1 {
@@ -66,6 +67,7 @@ h6 {
     color: #011826;
     font-size: 1.2rem;
 }
+/* end titles and subtitles */
 
 /*----------------------------------------- Main Page Content */
 hr {
@@ -106,8 +108,9 @@ p.text-muted {
     font-family: 'Futura-PT', sans-serif;
     margin: 10px 20px;
 }
+/* end main page content */
 
-/*-------------------------------------------- Header */
+/*-------------------------------------------- CTA Button */
 .cta_button, .cta_button:active {
     position: absolute;
     padding-left: 1.5rem;
@@ -135,6 +138,7 @@ p.text-muted {
     background: #69A8A9;
     color: #fafafa;
 }
+/*  end cta button */
 
 /*-------------------------------------------- Navbar */
 .navbar {
@@ -147,7 +151,7 @@ p.text-muted {
     color: #787d80;
 }
 
-/* Add Pagination: code copied from https://jsfiddle.net/g2ys46qo/2/ and Stack Overflow(https://stackoverflow.com/questions/41743102/changing-the-color-of-active-nav-item) */
+/* Navbar style properties copied from https://jsfiddle.net/g2ys46qo/2/ and Stack Overflow(https://stackoverflow.com/questions/41743102/changing-the-color-of-active-nav-item) */
 .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active {
     color:#69a8a9;
      text-decoration: overline;
@@ -177,6 +181,7 @@ a.navbar-brand {
     font-size: 1.7rem;
     text-shadow: 1px 1px 1px rgba(135, 156, 166, 0.7);
 }
+/* end navbar */
 
 /*-------------------------------------------- Jumbotron */
 /* jumbotron syntax and were copied from Code Institute's Whiskey Drop project */
@@ -249,6 +254,7 @@ h2.lead {
     margin-top: 10px;
     margin-bottom: 30px;
 }
+/* end jumbotron */
 
 /*-------------------------------------------- About */
 .about i {
@@ -257,7 +263,7 @@ h2.lead {
 }
 
 #mind, #body, #spirit, #peace, #love, #harmony {
-    padding: 10px 10px;
+    padding: 10px 20px;
 }
 
 i.fas.fa-yin-yang.d-sm-block,
@@ -281,6 +287,7 @@ i.fas.fa-praying-hands.d-sm-block:hover {
     font-size: 50px;
     margin-top: 20px;
 }
+/* end about */
 
 /*-------------------------------------------- Schedule */
 .container-wrapper-schedule{
@@ -297,8 +304,7 @@ p.schedule-content {
     -webkit-box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
     box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
 }
-
-/* Sign Up Button */
+/*---------- Sign Up Button */
 .signUp {
   width: 130px;
   height: 65px;
@@ -356,7 +362,7 @@ div.signUp, a.nav-item {
     color: #69a8a9;
 }
 /* end sign up button */
-/*-------------------------------------------- end schedule */
+/* end schedule */
 
 
 /*-------------------------------------------- Reviews */
@@ -407,7 +413,7 @@ blockquote {
 }
 /* end reviews */
 
-/*----------------------------------- Contact Section */
+/*-------------------------------------------- Contact */
 .container-wrapper-contact {
     background: rgba(135, 156, 166, 0.2);
     text-align: center;
@@ -472,7 +478,7 @@ input, #name, #contact-email, #comments {
     color: #69a8a9;
 }
 
-.form-control:placeholder {
+.form-control::placeholder {
     color: #787d80;
     font-family: "Futura-PT", sans-serif;
     font-size: 1rem;
@@ -497,7 +503,7 @@ button.btn.btn-info.float-right:hover {
     align-items: flex-start;
     text-align: center;
 }
-/* end contact section */
+/*----------------------------------- end contact */
 
 /*-------------------------------------------- Footer */
 footer {
@@ -585,7 +591,6 @@ li.breadcrumb-item {
 .text-md-right {
     text-align: right !important;
 }
-
 /* end footer */
 
 /*-------------------------------------------- Sections */
@@ -609,10 +614,9 @@ li.breadcrumb-item {
     margin-top: 50px;
     margin-bottom: 10px;
 }
-/*.end sections*/
+/* end sections */
 
 /*-------------------------------------------- Media Queries */
-/* Jumbotron */
 @media (max-width: 575px) {
     .cta_button, .cta_button:active {
         display: inline-block;
@@ -923,6 +927,5 @@ li.breadcrumb-item {
       font-size: 1.2rem;
       color: #081108;
     }
-  
   /* end 404 error styles */
   
