--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,17 +124,22 @@ p.text-muted {
     font-size: 1rem;
     text-transform: uppercase;
     text-align: left;
-    transform: rotate(-7deg);
+    -webkit-transform: rotate(-7deg);
+        -ms-transform: rotate(-7deg);
+            transform: rotate(-7deg);
     color: #fafafa;
     z-index: 1;
     border: none;
     outline: none;
-    animation: fadein 2.5s ease-in;
+    -webkit-animation: fadein 2.5s ease-in;
+            animation: fadein 2.5s ease-in;
 }
   
   .cta_button:hover {
     cursor: pointer;
-    transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+            transform: scale(1.05);
     background: #69A8A9;
     color: #fafafa;
 }
@@ -478,6 +483,30 @@ input, #name, #contact-email, #comments {
     color: #69a8a9;
 }
 
+.form-control::-webkit-input-placeholder {
+    color: #787d80;
+    font-family: "Futura-PT", sans-serif;
+    font-size: 1rem;
+}
+
+.form-control::-moz-placeholder {
+    color: #787d80;
+    font-family: "Futura-PT", sans-serif;
+    font-size: 1rem;
+}
+
+.form-control:-ms-input-placeholder {
+    color: #787d80;
+    font-family: "Futura-PT", sans-serif;
+    font-size: 1rem;
+}
+
+.form-control::-ms-input-placeholder {
+    color: #787d80;
+    font-family: "Futura-PT", sans-serif;
+    font-size: 1rem;
+}
+
 .form-control::placeholder {
     color: #787d80;
     font-family: "Futura-PT", sans-serif;
@@ -499,8 +528,12 @@ button.btn.btn-info.float-right:hover {
 
 #contact-info {
     margin: 10px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     text-align: center;
 }
 /*----------------------------------- end contact */
@@ -540,7 +573,8 @@ i.fab.fa-pinterest {
     color: #69a8a9;
     font-size: 1.3rem;
     margin: 10px 0;
-    box-sizing: content-box;
+    -webkit-box-sizing: content-box;
+            box-sizing: content-box;
     text-align: center;
     border: 1px solid transparent;
 }
@@ -565,10 +599,12 @@ li.breadcrumb-item {
 }
 
 .socials {
+    -webkit-transition: all 0.2s;
+    -o-transition: all 0.2s;
     transition: all 0.2s;
-    transition-delay: 0s;
+    -o-transition-delay: 0s;
+       transition-delay: 0s;
     -webkit-transition-delay: 0s;
-    -moz-transition-delay: 0s;
     transition-delay: 0s;
     display: inline-block;
     width: auto;
@@ -631,17 +667,22 @@ li.breadcrumb-item {
         font-family: 'Futura-PT', sans-serif;
         font-size: 12px;
         text-transform: uppercase;
-        transform: rotate(-7deg);
+        -webkit-transform: rotate(-7deg);
+            -ms-transform: rotate(-7deg);
+                transform: rotate(-7deg);
         color: #fafafa;
         margin: 0 auto;
         border: none;
         outline: none;
-        animation: fadein 2.5s ease-in;
+        -webkit-animation: fadein 2.5s ease-in;
+                animation: fadein 2.5s ease-in;
         vertical-align: middle;
         text-align: center;
     } .cta_button:hover {
         cursor: pointer;
-        transform: scale(1.05);
+        -webkit-transform: scale(1.05);
+            -ms-transform: scale(1.05);
+                transform: scale(1.05);
         background: #69A8A9;
         color: #fafafa;
     }
@@ -888,6 +929,7 @@ li.breadcrumb-item {
               box-shadow: 0px 0px 0px 2px #000, 2px 2px 0px 2px #69a8a9;
       text-decoration: none;
       -webkit-transition: 0.2s all;
+      -o-transition: 0.2s all;
       transition: 0.2s all;
     }
     
