--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@ html {
     font-size: 16px;
 }
 
-.col-xs-8.col-sm-4, .col-sm-6, .col-md-6 {
+.col-xs-8.col-sm-4, .col-sm-6, .col-md-6,
+.col-12.section-header {
     position: relative;
     width: 100%;
     padding-right: 15px;
@@ -159,7 +160,7 @@ p.text-muted {
 /* Navbar style properties copied from https://jsfiddle.net/g2ys46qo/2/ and Stack Overflow(https://stackoverflow.com/questions/41743102/changing-the-color-of-active-nav-item) */
 .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active {
     color:#69a8a9;
-     text-decoration: overline;
+    text-decoration: overline;
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
@@ -189,7 +190,7 @@ a.navbar-brand {
 /* end navbar */
 
 /*-------------------------------------------- Jumbotron */
-/* jumbotron syntax and were copied from Code Institute's Whiskey Drop project */
+/* jumbotron-container syntax copied from Code Institute's Whiskey Drop project */
 
 .jumbotron-container {
     background-image: url('../images/infinityphoto.jpg');
@@ -653,47 +654,6 @@ li.breadcrumb-item {
 /* end sections */
 
 /*-------------------------------------------- Media Queries */
-@media (max-width: 575px) {
-    .cta_button, .cta_button:active {
-        display: inline-block;
-        padding-left: .5rem;
-        position: absolute;
-        top: 1rem;
-        right: 5rem;
-        background: #011826;
-        width: 4rem;
-        height: 4rem;
-        border-radius: 50%;
-        font-family: 'Futura-PT', sans-serif;
-        font-size: 12px;
-        text-transform: uppercase;
-        -webkit-transform: rotate(-7deg);
-            -ms-transform: rotate(-7deg);
-                transform: rotate(-7deg);
-        color: #fafafa;
-        margin: 0 auto;
-        border: none;
-        outline: none;
-        -webkit-animation: fadein 2.5s ease-in;
-                animation: fadein 2.5s ease-in;
-        vertical-align: middle;
-        text-align: center;
-    } .cta_button:hover {
-        cursor: pointer;
-        -webkit-transform: scale(1.05);
-            -ms-transform: scale(1.05);
-                transform: scale(1.05);
-        background: #69A8A9;
-        color: #fafafa;
-    }
-}
-
-@media (min-width: 320px) {
-    .cta_button {
-        max-width: 480px;
-    } 
-}
-
 @media only screen and (max-width: 575px) {
     .jumbotron-container {
         background-image: url('../images/infinityphoto.jpg');
@@ -731,6 +691,203 @@ li.breadcrumb-item {
         font-size: 1rem;
     } a.btn.btn-info.btn-lg:hover {
         font-size: 1rem;
+    }
+}
+
+@media (max-width: 575px) {
+    .cta_button, .cta_button:active {
+        display: inline-block;
+        padding-left: .5rem;
+        position: absolute;
+        top: 1rem;
+        right: 5rem;
+        background: #011826;
+        width: 4rem;
+        height: 4rem;
+        border-radius: 50%;
+        font-family: 'Futura-PT', sans-serif;
+        font-size: 12px;
+        text-transform: uppercase;
+        -webkit-transform: rotate(-7deg);
+            -ms-transform: rotate(-7deg);
+                transform: rotate(-7deg);
+        color: #fafafa;
+        margin: 0 auto;
+        border: none;
+        outline: none;
+        -webkit-animation: fadein 2.5s ease-in;
+                animation: fadein 2.5s ease-in;
+        vertical-align: middle;
+        text-align: center;
+    } .cta_button:hover {
+        cursor: pointer;
+        -webkit-transform: scale(1.05);
+            -ms-transform: scale(1.05);
+                transform: scale(1.05);
+        background: #69A8A9;
+        color: #fafafa;
+    }
+}
+
+@media (max-width: 575px) {
+    .navbar {
+    font-family: 'Playfair Display', serif;
+    font-size: 1rem !important;
+    line-height: 1.5;
+}
+.navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
+    color: #787d80;
+    font-size: 14px;
+} 
+.navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active {
+    color:#69a8a9;
+     text-decoration: overline;
+     font-size: 14px;
+} 
+.navbar-light .navbar-nav .nav-link:hover {
+    color:#69a8a9;
+    font-size: 14px;
+} 
+.navbar-light .navbar-nav .nav-link {
+    font-size: 14px;
+} 
+i.fas.fa-infinity {
+    color: #69a8a9;
+    font-size: 1.2rem;
+    text-shadow: 1px 1px 1px #011826;
+} 
+i.fas.fa-infinity:hover {
+    color: #011826;
+    font-size: 1.2rem;
+    text-shadow: 1px 1px 1px #69a8a9;
+} 
+a.navbar-brand {
+    font-family: 'Futura-PT', sans-serif;
+    letter-spacing: 1.2px;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 1.2rem;
+    text-shadow: 1px 1px 1px rgba(135, 156, 166, 0.7); 
+    }
+ span.navbar-toggler-icon {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    vertical-align: middle;
+    content: "";
+    background: no-repeat center center;
+    background-size: 100% 100%;
+    }
+}
+
+@media only screen and (max-width: 320px) { 
+    ::-moz-selection { /* Code for Firefox */
+    color: #f2f2f2;
+    background: #69a8a9;
+  } 
+  ::selection {
+    color: #f2f2f2;
+    background: #69a8a9;
+} 
+h1 {
+    color: #011826;
+    text-shadow: 2px 2px #011826;
+    font-size: 2.3rem;
+} 
+h2 {
+    font-family: 'Playfair Display', serif;
+    font-size: 1.8rem;
+    font-style: italic;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+} 
+h2.section-header {
+    font-family: 'Playfair Display', serif;
+    font-size: 1.7rem;
+    font-style: italic;
+    text-align: center;
+    margin-bottom: 20px;
+}
+h3 {
+    font-family: 'Playfair Display', serif;
+    font-style: italic;
+    text-align: center;
+    color: #011826;
+    margin-bottom: 30px;
+    margin-top: 40px;
+    font-size: 1.5rem;
+} 
+h3.about-header {
+    font-family: 'Playfair Display', serif;
+    font-style: italic;
+    text-align: center;
+    color: #011826;
+    margin-bottom: 30px;
+    margin-top: 40px;
+    font-size: 1.5rem;
+} 
+h4, h5, h6 {
+    font-family: 'Playfair Display', serif;
+    font-style: italic;
+    text-align: center;
+    color: #011826;
+    font-size: 1.2rem;
+} 
+hr {
+    width: 20px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    border-top: 3px solid #69a8a9;
+}
+a {
+    color: #011801;
+    text-decoration: none;
+    background-color: transparent;
+}
+a:hover {
+    color: #69A8A9;
+    text-decoration: none;
+}
+mark {
+    background-color: transparent;
+    text-transform: uppercase;
+    text-shadow: .5px .5px .5px lightslategray;
+}
+p {
+    font-family: 'Futura-PT', sans-serif;
+    font-size: 1rem;
+    text-align: center;
+}
+#description {
+    padding: 10px 20px;
+} 
+p.text-muted {
+    font-family: 'Futura-PT', sans-serif;
+    margin: 10px 20px;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+    #about {
+        padding: 80px 10px;
+        margin: 50px 20px;
+    }
+    
+    #schedule {
+        padding: 80px 10px;
+        margin: 40px 20px;
+    }
+    
+    #reviews {
+        padding: 80px 10px;
+        margin: 50px 20px;
+    }
+    
+    #contact {
+        padding: 80px 10px;
+        margin-top: 50px;
+        margin-bottom: 10px;
     }
 }
 
